<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.trackmyterm.viewmodel.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        tools:context=".ui.authentication.fragments.RegisterFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_header_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_login_register_header_logo"
                android:layout_marginTop="@dimen/_50sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_header"
                style="@style/text_header"
                android:text="@string/txt_register_screen_title"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_header_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_header_caption"
                style="@style/text_header_caption"
                android:text="@string/txt_register_screen_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_40sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_header" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_full_name"
                style="@style/text_section_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/txt_edittext_full_name_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_header_caption" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_full_name"
                style="@style/base_edittext"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/txt_edittext_full_name_placeholder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:text="@={viewModel.fullName}"
                app:layout_constraintEnd_toEndOf="@id/tv_full_name"
                app:layout_constraintStart_toStartOf="@id/tv_full_name"
                app:layout_constraintTop_toBottomOf="@id/tv_full_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_email"
                style="@style/text_section_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/txt_edittext_email_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_full_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                style="@style/base_edittext"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/txt_edittext_email_placeholder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}"
                app:layout_constraintEnd_toEndOf="@id/tv_email"
                app:layout_constraintStart_toStartOf="@id/tv_email"
                app:layout_constraintTop_toBottomOf="@id/tv_email" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_password"
                style="@style/text_section_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/txt_edittext_password_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                style="@style/base_edittext"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/txt_edittext_password_placeholder"
                android:layout_width="0dp"
                android:paddingEnd="@dimen/_50sdp"
                android:paddingStart="@dimen/_25sdp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                app:layout_constraintEnd_toEndOf="@id/tv_password"
                app:layout_constraintStart_toStartOf="@id/tv_password"
                app:layout_constraintTop_toBottomOf="@id/tv_password" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_password_eye"
                android:src="@drawable/ic_password_eye"
                android:layout_marginEnd="@dimen/_20sdp"
                android:translationZ="@dimen/_2sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onPasswordEyeClicked()}"
                app:layout_constraintBottom_toBottomOf="@id/et_password"
                app:layout_constraintEnd_toEndOf="@id/et_password"
                app:layout_constraintTop_toTopOf="@id/et_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_input_validation_error"
                showUnlessGone="@{viewModel.isInputValid()}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:text="@{viewModel.inputValidationError}"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
                app:layout_constraintEnd_toEndOf="@id/et_password"
                app:layout_constraintStart_toStartOf="@id/et_password"
                app:layout_constraintTop_toBottomOf="@id/et_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                style="@style/default_button"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/_60sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_up"
                android:onClick="@{() -> viewModel.onSignUpClicked()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_50sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_up">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_already_have_account"
                    android:layout_width="wrap_content"
                    android:text="@string/txt_already_have_an_account"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/app_text_secondary" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_go_to_login"
                    style="@style/text_button"
                    android:paddingVertical="0dp"
                    android:minWidth="0dp"
                    android:onClick="@{() -> viewModel.navigateToLogin()}"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_navigate_to_log_in" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>